# nFlags

./: CMakeLists.txt  README.md  nFlags.sln
src/: CMakeLists.txt  Config.c  Config.h  FlagEnum.h  FlagInformation.c  FlagInformation.h  Font.c  ImageLoader.c  ImageLoader.h  MainMenu.c  MainMenu.h  Makefile  Replacements.c  Replacements.h  ShowFlagDetails.c  ShowFlagDetails.h  Thumbnail.c  Thumbnail.h  main.c  nFlags.vcxproj  nFlags.vcxproj.filters
src/ArchiveLib/: CMakeLists.txt
src/Images/: Makefile
src/libjpeg/: CMakeLists.txt  jdatasrc.c  jdcoefct.c  jdcolor.c  jdmerge.c  jdpostct.c  jdsample.c  jinclude.h  jmemname.c  jmemnobs.c  jquant1.c  jquant2.c
src/libz/: CMakeLists.txt  Makefile  zutil.c
