PROJECT(nTwoDigits)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_SUBDIRECTORY(ArchiveLib)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCE_FILES *.c)

SOURCE_GROUP(Source FILES ${SOURCE_FILES})
SOURCE_GROUP(Headers FILES ${HEADERS})

ADD_EXECUTABLE(nTwoDigits ${SOURCE_FILES} ${HEADERS} )

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_gfx REQUIRED)
FIND_PACKAGE(SDL_ttf REQUIRED)

TARGET_LINK_LIBRARIES(nFlags ArchiveLib ${SDL_LIBRARY} ${SDLGFX_LIBRARY} ${SDLTTF_LIBRARY})
INCLUDE_DIRECTORIES(nFlags include ${SDL_INCLUDE_DIRS})
